# fsic

./: .gitignore  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  fsic.py  fsic_fortran.py  fsictools.py  makefile  pyproject.toml  requirements.txt  setup.py  test_fsic.py  test_fsic_fortran.py  test_fsic_tools.py  test_fsictools.py
.github/workflows/: python-package.yml
examples/: README.md  makefile
examples/_cookbook/: README.md  aliases.py  eval.py  fortran_engine.py  makefile  pandas_indexing.py  polars_support.py  progress_bar.py  quickstart.py  reindex.py  reindex_pandas_extension.py
examples/almon_2017/: README.md  ami.py  data.csv  makefile
examples/define/: README.md  define_simple.py  makefile
examples/godley-lavoie_2007/: 3_sim.py  4_pc.py  5_lp1.py  6_open.py  6_reg.py  7_bmw.py  9_dis.py  README.md  makefile
examples/klein_1950/: README.md  estimate_equations.py  klein_model_i.py  makefile  process_data.py
examples/macrosimulation/: README.md  kaldorian_endogenous_business_cycle_model.py  makefile  new_keynesian_3_equation_model.py  sraffian_supermultiplier_model.py
fsic/: __init__.py  core.py  exceptions.py  fortran.py  functions.py  parser.py  tools.py
fsic/core/: __init__.py  containers.py  interfaces.py  linkers.py  models.py
fsic/extensions/: __init__.py  common.py  model.py
requirements/: examples.txt  tools.txt
sandbox/: README.md  aliasing.py  makefile  progress_bar.py
sandbox/progress-bar/: example.py  progress_bar.py
src/fsic/: __init__.py  exceptions.py  fortran.py  functions.py  parser.py  tools.py
src/fsic/core/: containers.py  linkers.py  models.py
src/fsic/extensions/: __init__.py  common.py  linker.py  model.py
tests/: test_core.py  test_extensions.py  test_fortran.py  test_fsic.py  test_fsic_fortran.py  test_fsic_functions.py  test_fsic_tools.py  test_functions.py  test_parser.py  test_tools.py
