[project]
name = "fsic"
description = "Tools for macroeconomic modelling in Python"
license = {file = "LICENSE"}

authors = [
  {name = "Chris Thoung", email = "chris.thoung@gmail.com"},
]

dynamic = ["version", "readme"]

requires-python = ">=3.6"
dependencies = [
	"numpy",
]

classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering",
]
keywords = ["economics", "modelling"]

[project.optional-dependencies]
all = ["fsic[development,examples,extensions,sandbox,test,tools]"]
development = [
	"mypy",
	"ruff",
]
examples = [
	"linearmodels<4.25",
	"matplotlib",
	"pandas",
	"tqdm",
]
extensions = [
	"pandas",
	"tqdm",
]
sandbox = [
	"tqdm",
]
test = [
	"pytest",
	"pytest-cov",
	"pytest-randomly",
]
tools = [
	"networkx",
	"pandas",
	"sympy",
]

[tool.setuptools]
packages = ["fsic", "fsic.core", "fsic.extensions"]

[tool.setuptools.dynamic]
version = {attr = "fsic.__version__"}
readme = {file = ["README.md"]}

[project.urls]
Homepage = "https://github.com/ChrisThoung/fsic.git"
Repository = "https://github.com/ChrisThoung/fsic.git"
Documentation = "https://github.com/ChrisThoung/fsic.git"
Changelog = "https://github.com/ChrisThoung/fsic/blob/main/CHANGELOG.md"

[tool.ruff.format]
quote-style = "single"
