[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fsic"
description = "Tools for macroeconomic modelling in Python"
license = "MIT"
license-files = ["LICEN[CS]E*"]

authors = [
  {name = "Chris Thoung", email = "chris.thoung@gmail.com"},
]

dynamic = ["version", "readme"]

requires-python = ">=3.10"
dependencies = [
	"numpy",
]

classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: Scientific/Engineering",
]
keywords = ["economics", "modelling"]

[project.optional-dependencies]
all = ["fsic[compatibility,development,doc,examples,extensions,pandas,polars,sandbox,test,tools]"]

compatibility = [
    "fsic[pandas]",
    "fsic[polars]",
]
development = [
	"mypy",
	"ruff",
]
doc = [
	"sphinx",
]
examples = [
	"linearmodels<4.25",
	"matplotlib",
	"pandas",
	"tqdm",
]
extensions = [
	"pandas",
	"tqdm",
]
pandas = [
	"pandas",
]
polars = [
	"polars",
]
sandbox = [
	"tqdm",
]
test = [
	"pytest",
	"pytest-cov",
	"pytest-randomly",
]
tools = [
	"networkx",
	"pandas",
	"sympy",
]

[tool.setuptools.dynamic]
version = {attr = "fsic.__version__"}
readme = {file = ["README.md"]}

[project.urls]
Homepage = "https://github.com/ChrisThoung/fsic.git"
Repository = "https://github.com/ChrisThoung/fsic.git"
Documentation = "https://github.com/ChrisThoung/fsic.git"
Changelog = "https://github.com/ChrisThoung/fsic/blob/main/CHANGELOG.md"

[tool.ruff.format]
quote-style = "single"
